--- a/package.json
+++ b/package.json
@@ -31,9 +31,25 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "immer": "^10.0.0"
+    "immer": "^10.0.0",
+    "react-icons": "^4.12.0",
+    "@tiptap/react": "^2.1.0",
+    "@tiptap/starter-kit": "^2.1.0",
+    "@tiptap/extension-ordered-list": "^2.1.0",
+    "@tiptap/extension-color": "^2.1.0",
+    "@tiptap/extension-text-align": "^2.1.0",
+    "@tiptap/extension-heading": "^2.1.0",
+    "@tiptap/extension-text-style": "^2.1.0",
+    "@tiptap/extension-list-item": "^2.1.0",
+    "@tiptap/extension-bullet-list": "^2.1.0",
+    "@tiptap/extension-link": "^2.1.0",
+    "@tiptap/extension-underline": "^2.1.0",
+    "classnames": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-react": "^7.27.1",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
