--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formthinker",
-  "version": "1.0.3",
+  "version": "1.0.8",
   "description": "React UI helper. Generate interactive form based on given schema",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -26,25 +26,21 @@
   ],
   "author": "Akrit Singha",
   "license": "ISC",
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
-  },
   "dependencies": {
-    "immer": "^10.0.0",
-    "react-icons": "^4.12.0",
+    "@tiptap/extension-bullet-list": "^2.1.0",
+    "@tiptap/extension-color": "^2.1.0",
+    "@tiptap/extension-heading": "^2.1.0",
+    "@tiptap/extension-link": "^2.1.0",
+    "@tiptap/extension-list-item": "^2.1.0",
+    "@tiptap/extension-ordered-list": "^2.1.0",
+    "@tiptap/extension-text-align": "^2.1.0",
+    "@tiptap/extension-text-style": "^2.1.0",
+    "@tiptap/extension-underline": "^2.1.0",
     "@tiptap/react": "^2.1.0",
     "@tiptap/starter-kit": "^2.1.0",
-    "@tiptap/extension-ordered-list": "^2.1.0",
-    "@tiptap/extension-color": "^2.1.0",
-    "@tiptap/extension-text-align": "^2.1.0",
-    "@tiptap/extension-heading": "^2.1.0",
-    "@tiptap/extension-text-style": "^2.1.0",
-    "@tiptap/extension-list-item": "^2.1.0",
-    "@tiptap/extension-bullet-list": "^2.1.0",
-    "@tiptap/extension-link": "^2.1.0",
-    "@tiptap/extension-underline": "^2.1.0",
-    "classnames": "^2.3.0"
+    "classnames": "^2.3.0",
+    "immer": "^10.0.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
