--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tiptap/starter-kit": "^2.1.0",
     "classnames": "^2.3.0",
     "immer": "^10.0.0",
+    "lodash.throttle": "^4.1.1",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
