--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "lodash.throttle": "^4.1.1",
     "react-icons": "^4.12.0"
   },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/preset-react": "^7.27.1",
