--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "formthinker",
-  "version": "1.2.11",
+  "version": "1.2.12",
   "description": "React UI helper. Generate interactive form based on given schema",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js",
+      "default": "./dist/index.js"
+    },
+    "./dist/style.css": "./dist/style.css",
+    "./package.json": "./package.json"
+  },
   "files": [
     "dist",
     "README.md",
@@ -44,8 +53,8 @@
     "react-icons": "^4.12.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
